<resources>
    <string name="app_name">Hi Dear</string>
    <string name="email_hint">name.lastname@test.com</string>
    <string name="password_hint">.....</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="user_name_empty">user name is required</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Wrong id or password</string>
    <string name="age_empty">age is required</string>
    <string name="gender_empty">gender is required</string>
    <string name="name">name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="prompt_register">Already registered? click here</string>
    <string name="registration_success">Register successfully</string>
    <string name="registration_failed">Registration is not successfull</string>
    <string name="login_successful">Login Successful</string>
    <string name="forget_pass_send_success">Reset password email sent</string>
    <string name="txt_browse">Browse</string>
    <string name="slogan">more than a dating app</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="login">Login</string>
    <string name="email_mobile">Email or Mobile</string>
    <string name="password">Password</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_promot">Don’t have an account? Sign up</string>
    <string name="signup">Signup</string>
    <string name="user_name">User Name</string>
    <string name="user_name_hint">LondonGirl87</string>
    <string name="age">Age</string>
    <string name="age_hint">29</string>
    <string name="gender">Gender</string>
    <string name="gender_hint">Male</string>
    <string name="country">Country</string>
    <string name="country_hint">Bangladesh</string>
    <string name="city">City</string>
    <string name="city_hint">Dhaka</string>
    <string name="email_mobile_empty">Email or Mobile is required</string>
    <string name="city_empty">City is required</string>
    <string name="country_empty">Country is required</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login_prompt">Already a member?</string>
    <string name="email">email address</string>
    <string name="forgot_password_instruction">Enter your email address, we’ll send you the  instructions on how to change your password</string>
    <string name="send">Send</string>
    <string name="email_empty">Email feild is empty</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="txt_message">Message</string>
    <string name="txt_match">Match</string>
    <string name="txt_tips">Tips</string>
    <string name="txt_setting">Setting</string>
    <string name="sample_profile_name">Cameron</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hi_dear_app">Hi Dear App</string>
    <string name="see_details">see details</string>
    <string name="search_messages">Search messages</string>
    <string name="online">online</string>
    <string name="block">block</string>
    <string name="accept">Accept</string>
    <string name="no">No</string>
    <string name="accept_msg">Added on %s</string>
    <string name="rejected">Rejected</string>
    <string name="loading">Loading</string>
    <string name="we_want_your_feedback">We want your feedback</string>
    <string name="you_want_to_make_the_most_out_of_hi_dear">You want to make the most out of Hi Dear?</string>
    <string name="contact_us">Contact Us</string>
    <string name="general">General</string>
    <string name="my_current_location">My current location</string>
    <string name="search_radius">Search radius</string>
    <string name="gender_preference">Gender preference</string>
    <string name="privacy">privacy</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="logout_msg">Do you want to logout ?</string>
    <string name="account_delete_message">Do you want to delete your account ?</string>
    <string name="about_me">About Me</string>
    <string name="type_a_message">Type your message..</string>
    <string name="add">Add Picture</string>
    <string name="permission_gallery_denied_permanent">please enable file access permission from setting</string>
    <string name="gallery_permission_explanation">Need your file access permission to select image</string>
    <string name="permission_gallery_denied">File access permission denied</string>
    <string name="invalid_picture">Profile pictue is required</string>
    <string name="request_send">Request sent successfully</string>
    <string name="request_send_failed">Request sent failed</string>
    <string name="fetch_success">data successfully fetched</string>
    <string name="fetch_failed">data fetched failed</string>
    <string name="message_declined">request declined successfully</string>
    <string name="message_declined_failed">unable to declined request</string>
    <string name="message_accepted">request accepted successfully</string>
    <string name="message_accepted_failed">unable to accept request</string>
    <string name="declined">Declined</string>
    <string name="chat_now">Chat now</string>
    <string name="chat_sent_failed">Message sent failed</string>
    <string name="chat_sent_success">chat sent success</string>
    <string name="coming_soon">coming soon</string>
    <string name="email_client_not_found">No email app installed</string>
    <string name="gallery_app_not_found">No gallery app installed</string>
    <string name="drawer">Menu</string>
    <string name="chat">Chat</string>
    <string name="notification_text"><![CDATA[<b>%s</b>%s]]></string>
    <string name="save_change">Do you want to delete changes ?</string>
    <string name="save">save</string>
    <string name="edit_saved">Edited data saved successfully</string>
    <string name="edit_failed">unable to save edited data</string>
    <string name="delete_successful">account deleted successfully</string>
    <string name="delete_failed">account delete failed</string>
    <string name="password_fetched">Password fetched successfully</string>
    <string name="user_not_found">did not found any matched user</string>
    <string name="go_to_login">Go to login</string>
    <string name="no_internet_connection">No internet connection !</string>
    <string name="test_Interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="reward_add_test_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="boost_profile">Boost Profile</string>
    <string name="top_profile">Top Profile</string>
    <string name="gift">Click the box for your today\'s gift</string>
    <string name="remaining_coin">%d Coins Left</string>
    <string name="boost_msg">when you boost your profile,it will have 2X reach and will be featured in Top Profile Page</string>
    <string name="boost_10">Boost profile for 10 min</string>
    <string name="boost_30">Boost profile for 30 min</string>
    <string name="small_boost_confirm_msg">Are you sure to boost for 10 minutes?\nWhich will cost 20 Coins</string>
    <string name="large_boost_confirm_msg">Are you sure to boost for 30 minutes?\nWhich will cost 50 Coins</string>
    <string name="ad">AD</string>
    <string name="browse_empty_text">No user available right now</string>
    <string name="gift_empty_msg">No more gift for today,\nTry again tomorrow !</string>
    <string name="ok">Ok</string>
    <string name="not_enough_coin_msg">Not enough coin. watch an AD</string>
    <string name="boost_time_msg">Already boosted will finish at\n%s</string>
    <string name="top_profile_empty_msg">No profile to show</string>
    <string name="coin_reward_msg">Congrats! You have received %d Coins</string>
    <string name="no_ad_available">No Ad available,try again later !</string>
    <string name="are_you_confirm">Are you Confirm?\n%d coins will be deduced</string>
    <string name="exit_confirm_msg">Do you want to exit?</string>
    <string name="choose_img">Choose Image</string>
</resources>