<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".ui.activity.login.LoginActivity">


    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/label1"
            android:layout_marginBottom="24dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_mobile"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:hint="@string/prompt_email"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_32"
                android:background="@drawable/button_background"
                android:padding="@dimen/dp_10"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/primary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/register"
        android:background="@color/transparent_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_promot"
        android:textColor="@color/white"
        android:padding="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center" />
</androidx.constraintlayout.widget.ConstraintLayout>