<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/primary"
            android:paddingTop="50dp"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/we_want_your_feedback"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/you_want_to_make_the_most_out_of_hi_dear"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/btn_contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_32"
                android:backgroundTint="@color/white"
                android:background="@drawable/button_background"
                android:padding="@dimen/dp_10"
                android:text="@string/contact_us"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="13sp"
                android:ems="10"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <TextView
            android:id="@+id/heading_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/blue_black"
            android:text="@string/general"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/almost_white_lite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:padding="@dimen/dp_16" />

        <View
            android:id="@+id/border1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading_1" />

        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/blue_black"
            android:text="@string/my_current_location"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border1"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/pink"
            android:maxEms="10"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/coming_soon"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@id/border1"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/border2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="@id/label1"
            app:layout_constraintEnd_toEndOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/label1" />

        <TextView
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/blue_black"
            android:text="@string/search_radius"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border2"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16" />

        <TextView
            android:id="@+id/radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/pink"
            android:maxEms="10"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/coming_soon"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@id/border2"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/border3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="@id/label2"
            app:layout_constraintEnd_toEndOf="@id/radius"
            app:layout_constraintTop_toBottomOf="@id/label2" />

        <TextView
            android:id="@+id/label3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/blue_black"
            android:text="@string/gender_preference"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border3"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:visibility="gone" />

        <TextView
            android:id="@+id/preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/pink"
            android:maxEms="10"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="Male"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:textAllCaps="true"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/border3"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/border4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="@id/label3"
            app:layout_constraintEnd_toEndOf="@id/preference"
            app:layout_constraintTop_toBottomOf="@id/label3" />

        <TextView
            android:id="@+id/heading_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/blue_black"
            android:text="@string/privacy"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/almost_white_lite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preference"
            android:padding="@dimen/dp_16" />

        <View
            android:id="@+id/border5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading_2" />


        <TextView
            android:id="@+id/label6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/blue_black"
            android:text="@string/log_out"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border5"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16" />

        <TextView
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:ems="6"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/log_out"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/border5"
            android:backgroundTint="@color/light_purple"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/border7"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="@id/label6"
            app:layout_constraintEnd_toEndOf="@id/btn_logout"
            app:layout_constraintTop_toBottomOf="@id/label6" />


        <TextView
            android:id="@+id/label8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/blue_black"
            android:text="@string/delete_account"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border7"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16" />

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:ems="6"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/delete"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/border7"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/border8"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="@id/label8"
            app:layout_constraintEnd_toEndOf="@id/btn_delete"
            app:layout_constraintTop_toBottomOf="@id/label8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
